Small fixes: Diagnostics: Add new diagnostics.   - Proper alignment of all fields.

--- a/web/css/master.css
+++ b/web/css/master.css
@@ -545,3 +545,7 @@ margin-top: 7px;
 .padding-right-zero{
     padding-right: 0;
 }
+.padding-left-three
+{
+    padding-left: 3px;
+}
